// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`misc_sanity.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "d1",
                },
                "inh": true,
                "location": 580,
                "relname": "pg_depend",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 573,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 573,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "refclassid",
                            },
                          },
                        ],
                        "location": 602,
                      },
                    },
                    "location": 613,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 615,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "refobjid",
                            },
                          },
                        ],
                        "location": 620,
                      },
                    },
                    "location": 629,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 631,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "classid",
                            },
                          },
                        ],
                        "location": 642,
                      },
                    },
                    "location": 650,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 652,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "objid",
                            },
                          },
                        ],
                        "location": 657,
                      },
                    },
                    "location": 663,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 665,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_IN",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "deptype",
                            },
                          },
                        ],
                        "location": 676,
                      },
                    },
                    "location": 684,
                    "name": [
                      {
                        "String": {
                          "sval": "<>",
                        },
                      },
                    ],
                    "rexpr": {
                      "List": {
                        "items": [
                          {
                            "A_Const": {
                              "location": 692,
                              "sval": {
                                "sval": "a",
                              },
                            },
                          },
                          {
                            "A_Const": {
                              "location": 697,
                              "sval": {
                                "sval": "e",
                              },
                            },
                          },
                          {
                            "A_Const": {
                              "location": 702,
                              "sval": {
                                "sval": "i",
                              },
                            },
                          },
                          {
                            "A_Const": {
                              "location": 707,
                              "sval": {
                                "sval": "n",
                              },
                            },
                          },
                          {
                            "A_Const": {
                              "location": 712,
                              "sval": {
                                "sval": "x",
                              },
                            },
                          },
                          {
                            "A_Const": {
                              "location": 717,
                              "sval": {
                                "sval": "P",
                              },
                            },
                          },
                          {
                            "A_Const": {
                              "location": 722,
                              "sval": {
                                "sval": "S",
                              },
                            },
                          },
                        ],
                      },
                    },
                  },
                },
              ],
              "boolop": "OR_EXPR",
              "location": 617,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`misc_sanity.sql > line 23 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "d1",
                },
                "inh": true,
                "location": 118,
                "relname": "pg_shdepend",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 111,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 111,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "refclassid",
                            },
                          },
                        ],
                        "location": 142,
                      },
                    },
                    "location": 153,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 155,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "refobjid",
                            },
                          },
                        ],
                        "location": 160,
                      },
                    },
                    "location": 169,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 171,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "classid",
                            },
                          },
                        ],
                        "location": 182,
                      },
                    },
                    "location": 190,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 192,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "objid",
                            },
                          },
                        ],
                        "location": 197,
                      },
                    },
                    "location": 203,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 205,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_IN",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "deptype",
                            },
                          },
                        ],
                        "location": 216,
                      },
                    },
                    "location": 224,
                    "name": [
                      {
                        "String": {
                          "sval": "<>",
                        },
                      },
                    ],
                    "rexpr": {
                      "List": {
                        "items": [
                          {
                            "A_Const": {
                              "location": 232,
                              "sval": {
                                "sval": "a",
                              },
                            },
                          },
                          {
                            "A_Const": {
                              "location": 237,
                              "sval": {
                                "sval": "o",
                              },
                            },
                          },
                          {
                            "A_Const": {
                              "location": 242,
                              "sval": {
                                "sval": "r",
                              },
                            },
                          },
                          {
                            "A_Const": {
                              "location": 247,
                              "sval": {
                                "sval": "t",
                              },
                            },
                          },
                        ],
                      },
                    },
                  },
                },
              ],
              "boolop": "OR_EXPR",
              "location": 157,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`misc_sanity.sql > line 34 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "JoinExpr": {
                "jointype": "JOIN_INNER",
                "larg": {
                  "RangeVar": {
                    "alias": {
                      "aliasname": "c",
                    },
                    "inh": true,
                    "location": 595,
                    "relname": "pg_class",
                    "relpersistence": "p",
                  },
                },
                "quals": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "c",
                            },
                          },
                          {
                            "String": {
                              "sval": "oid",
                            },
                          },
                        ],
                        "location": 629,
                      },
                    },
                    "location": 635,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "attrelid",
                            },
                          },
                        ],
                        "location": 637,
                      },
                    },
                  },
                },
                "rarg": {
                  "RangeVar": {
                    "alias": {
                      "aliasname": "a",
                    },
                    "inh": true,
                    "location": 611,
                    "relname": "pg_attribute",
                    "relpersistence": "p",
                  },
                },
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 755,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "A_Const": {
                    "ival": {
                      "ival": 2,
                    },
                    "location": 758,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 554,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "relname",
                        },
                      },
                    ],
                    "location": 554,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 563,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "attname",
                        },
                      },
                    ],
                    "location": 563,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 572,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "atttypid",
                            },
                          },
                        ],
                        "location": 572,
                      },
                    },
                    "location": 580,
                    "typeName": {
                      "location": 582,
                      "names": [
                        {
                          "String": {
                            "sval": "regtype",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "c",
                            },
                          },
                          {
                            "String": {
                              "sval": "oid",
                            },
                          },
                        ],
                        "location": 652,
                      },
                    },
                    "location": 658,
                    "name": [
                      {
                        "String": {
                          "sval": "<",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 16384,
                        },
                        "location": 660,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "reltoastrelid",
                            },
                          },
                        ],
                        "location": 676,
                      },
                    },
                    "location": 690,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 692,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "relkind",
                            },
                          },
                        ],
                        "location": 704,
                      },
                    },
                    "location": 712,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 714,
                        "sval": {
                          "sval": "r",
                        },
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "attstorage",
                            },
                          },
                        ],
                        "location": 728,
                      },
                    },
                    "location": 739,
                    "name": [
                      {
                        "String": {
                          "sval": "<>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 742,
                        "sval": {
                          "sval": "p",
                        },
                      },
                    },
                  },
                },
              ],
              "boolop": "AND_EXPR",
              "location": 666,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`misc_sanity.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 141,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 306,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 128,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "relname",
                        },
                      },
                    ],
                    "location": 128,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "relnamespace",
                            },
                          },
                        ],
                        "location": 156,
                      },
                    },
                    "location": 169,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 171,
                            "sval": {
                              "sval": "pg_catalog",
                            },
                          },
                        },
                        "location": 183,
                        "typeName": {
                          "location": 185,
                          "names": [
                            {
                              "String": {
                                "sval": "regnamespace",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "relkind",
                            },
                          },
                        ],
                        "location": 202,
                      },
                    },
                    "location": 210,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 212,
                        "sval": {
                          "sval": "r",
                        },
                      },
                    },
                  },
                },
                {
                  "BoolExpr": {
                    "args": [
                      {
                        "SubLink": {
                          "location": 239,
                          "subLinkType": "ANY_SUBLINK",
                          "subselect": {
                            "SelectStmt": {
                              "fromClause": [
                                {
                                  "RangeVar": {
                                    "inh": true,
                                    "location": 268,
                                    "relname": "pg_index",
                                    "relpersistence": "p",
                                  },
                                },
                              ],
                              "limitOption": "LIMIT_OPTION_DEFAULT",
                              "op": "SETOP_NONE",
                              "targetList": [
                                {
                                  "ResTarget": {
                                    "location": 254,
                                    "val": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "indrelid",
                                            },
                                          },
                                        ],
                                        "location": 254,
                                      },
                                    },
                                  },
                                },
                              ],
                              "whereClause": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "indisprimary",
                                      },
                                    },
                                  ],
                                  "location": 283,
                                },
                              },
                            },
                          },
                          "testexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "pg_class",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "oid",
                                  },
                                },
                              ],
                              "location": 226,
                            },
                          },
                        },
                      },
                    ],
                    "boolop": "NOT_EXPR",
                    "location": 239,
                  },
                },
              ],
              "boolop": "AND_EXPR",
              "location": 198,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`misc_sanity.sql > line 65 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "JoinExpr": {
                "jointype": "JOIN_INNER",
                "larg": {
                  "RangeVar": {
                    "alias": {
                      "aliasname": "c",
                    },
                    "inh": true,
                    "location": 111,
                    "relname": "pg_class",
                    "relpersistence": "p",
                  },
                },
                "quals": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "c",
                            },
                          },
                          {
                            "String": {
                              "sval": "oid",
                            },
                          },
                        ],
                        "location": 141,
                      },
                    },
                    "location": 147,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "i",
                            },
                          },
                          {
                            "String": {
                              "sval": "indexrelid",
                            },
                          },
                        ],
                        "location": 149,
                      },
                    },
                  },
                },
                "rarg": {
                  "RangeVar": {
                    "alias": {
                      "aliasname": "i",
                    },
                    "inh": true,
                    "location": 127,
                    "relname": "pg_index",
                    "relpersistence": "p",
                  },
                },
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 321,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 98,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "relname",
                        },
                      },
                    ],
                    "location": 98,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "relnamespace",
                            },
                          },
                        ],
                        "location": 168,
                      },
                    },
                    "location": 181,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 183,
                            "sval": {
                              "sval": "pg_catalog",
                            },
                          },
                        },
                        "location": 195,
                        "typeName": {
                          "location": 197,
                          "names": [
                            {
                              "String": {
                                "sval": "regnamespace",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "relkind",
                            },
                          },
                        ],
                        "location": 214,
                      },
                    },
                    "location": 222,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 224,
                        "sval": {
                          "sval": "i",
                        },
                      },
                    },
                  },
                },
                {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                      {
                        "String": {
                          "sval": "indisunique",
                        },
                      },
                    ],
                    "location": 238,
                  },
                },
                {
                  "BoolExpr": {
                    "args": [
                      {
                        "SubLink": {
                          "location": 268,
                          "subLinkType": "ANY_SUBLINK",
                          "subselect": {
                            "SelectStmt": {
                              "fromClause": [
                                {
                                  "RangeVar": {
                                    "inh": true,
                                    "location": 297,
                                    "relname": "pg_constraint",
                                    "relpersistence": "p",
                                  },
                                },
                              ],
                              "limitOption": "LIMIT_OPTION_DEFAULT",
                              "op": "SETOP_NONE",
                              "targetList": [
                                {
                                  "ResTarget": {
                                    "location": 283,
                                    "val": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "conindid",
                                            },
                                          },
                                        ],
                                        "location": 283,
                                      },
                                    },
                                  },
                                },
                              ],
                            },
                          },
                          "testexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "c",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "oid",
                                  },
                                },
                              ],
                              "location": 262,
                            },
                          },
                        },
                      },
                    ],
                    "boolop": "NOT_EXPR",
                    "location": 268,
                  },
                },
              ],
              "boolop": "AND_EXPR",
              "location": 210,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;
